--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <nav>
-            <h3>Mary</h3>
-        <ul>
-            <li><a href=""></a>Portfolio</li>
-            <li><a href=""></a>Blog</li>
-            <li><button>Hire Me</button></li>
-        </ul>
+            <h3 class="nav-tital">Ma<span class="text-primari">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
         </nav>
         
     </header>
