--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-tital">Ma<span class="text-primari">r</span>y</h3>
             <ul>
@@ -19,10 +19,22 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
-        
+        <div class="bannar">
+            <div class="bannar-content">
+                <h3 class="bannar-hed">Hi, I  am</h3>
+                <h1 class="bannar-titel">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Downlode CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="bannar-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <footer>
 
