--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,6 +35,54 @@
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-discription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-containar">
+                <about class="info">
+                    <h4 class="info-tital">Name:</h4>
+                    <p class="about-discription">Mary Hardy</p>
+                </about>
+                <about class="info">
+                    <h4 class="info-tital">Email:</h4>
+                    <p class="about-discription">info@gmail.com</p>
+                </about>
+                <about class="info">
+                    <h4 class="info-tital">Date of birth:</h4>
+                    <p class="about-discription">11 November 1987</p>
+                </about>
+                <about class="info">
+                    <h4 class="info-tital">From:</h4>
+                    <p class="about-discription">Los Angeles, USA</p>
+                </about>
+            </div>
+        </section>
+
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p class="section-discription">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-containar">
+                <skills class="skills">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skills-title">Vanilla JavaScript</h3>
+                    <p class="skills-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skills>
+                <skills class="skills">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skills-title">React</h3>
+                    <p class="skills-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skills>
+                <skills class="skills">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skills-title">Node.js</h3>
+                    <p class="skills-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skills>
+                <skills class="skills">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skills-title">MongoDB</h3>
+                    <p class="skills-discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skills>
+            </div>
+        </section>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
         </section>
     </main>
     <footer>
